--- a/scss/_frequentQuestions.scss
+++ b/scss/_frequentQuestions.scss
@@ -22,7 +22,7 @@
       position: relative;
       z-index: 10;
       font-size: 18px;
-      font-family: "dosisBold";
+      font-family: "dosisSemiBold";
       &:hover{
         color: $cinereous;
       }
