--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,10 +1,12 @@
 .footerContainer{
+  position: relative;
   display: flex;
   background-color: $almond;
   padding-top: 40px;
   padding-bottom: 40px;
   justify-content: space-evenly;
   align-items: center;
+  z-index: 100;
   .footerText{
     font-family: "dosisRegular";
     font-size: 22px;
