--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -84,4 +84,12 @@
     display: flex;
     justify-content: center;
   }
+  .videoContainer{
+    padding-top: 70px;
+    display: flex;
+    justify-content: center;
+    iframe{
+      border-radius: 20px;
+    }
+  }
 }
