[feature] - zoom trial

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -10,10 +10,8 @@
     margin-bottom: 50px;
     background-color: $almond;
     .contactTitle{
-      top: -25px;
-      position: absolute;
-      color: $dark;
-      font-family: "beautyDream";
+      color: $light;
+      font-family: "loveloBlack";
       font-size: 45px;
     }
   }
