--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -91,6 +91,7 @@
     .homeDescriptionText{
       font-family: "dosisRegular";
       padding-bottom: 20px;
+      text-align: justify;
     }
   }
 }
