--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -44,7 +44,9 @@
     }
     .professionalDescriptionContainer{
       position: absolute;
-      bottom: -100px;
+      bottom: -150px;
+      padding-left: 10px;
+      padding-right: 10px;
       background-color: rgba(163, 143, 133, .5);
       border-radius: 10px;
       .professionalName{
@@ -59,6 +61,12 @@
         font-size: 16px;
         color: $isabeline;
         text-align: center;
+      }
+      .seeMore{
+        cursor: pointer;
+        &:hover{
+          color: $light;
+        }
       }
     }
 
@@ -80,12 +88,12 @@
     }
   }
   .quoteContainer{
-    margin-top: 150px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
   }
   .videoContainer{
-    padding-top: 70px;
+    padding-top: 200px;
     display: flex;
     justify-content: center;
     iframe{
