--- a/src/App.css
+++ b/src/App.css
@@ -112,25 +112,26 @@ html a {
     position: relative;
     justify-content: space-between;
     padding-top: 50px;
-    padding-bottom: 50px; }
-    .section1Container .subtitleContainer .imageSubtitleShadow {
+    padding-bottom: 50px;
+    /* .imageSubtitleShadow{
       z-index: 50;
-      top: -20px;
+      top:-20px;
       position: absolute;
-      background-color: #e7d7c9;
+      background-color: $almond;
       height: 620px;
       width: 28%;
       margin-left: 170px;
-      border-radius: 20px; }
+      border-radius: 20px;
+    } */ }
     .section1Container .subtitleContainer .imageSubtitleContainer {
       z-index: 100;
-      top: -110px;
+      top: -100px;
       position: absolute;
-      background-image: url(../src/images/section1Image.jpg);
-      background-size: contain;
-      height: 675px;
+      background-image: url(../src/images/prueba.jpg);
+      background-size: cover;
+      height: 695px;
       width: 28%;
-      margin-left: 140px;
+      margin-left: 150px;
       border-radius: 20px; }
       .section1Container .subtitleContainer .imageSubtitleContainer .ImageSubtitle {
         font-family: "beautyDream";
