--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -7,10 +7,10 @@
       font-family: "loveloBlack";
       font-size: 22px;
       text-align: center;
-      margin-bottom: 15px;
+      margin-bottom: 25px;
     }
     .subTitleContainer{
-      padding: 0px 90px;
+      padding: 0px 70px;
       .section3SubTitle{
         font-family: "dosisRegular";
         font-size: 16px;
@@ -54,6 +54,7 @@
         padding: 5px 15px;
         font-size: 19px;
         color: $light;
+        text-align: center;
       }
       .professionalDescription{
         font-family: "dosisSemiBold";
