--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,12 +1,9 @@
 .contactContainer{
   display: flex;
   flex-direction: column;
-  width: 70%;
   .contactTitleContainer{
     position: relative;
     align-self: center;
-    width: 50%;
-    height: 40px;
     margin-bottom: 50px;
     background-color: $almond;
     .contactTitle{
@@ -16,6 +13,8 @@
     }
   }
   .contactFormContainer{
+    padding-left: 10%;
+    padding-right: 10%;
     form{
       display: flex;
       flex-direction: column;
@@ -24,13 +23,16 @@
         justify-content: space-between;
       }
       input{
-        padding: 5px 2px;
+        padding: 5px 10px;
         margin-bottom: 10px;
+        font-family: "dosisRegular";
       }
       textarea{
         margin-bottom: 10px;
+        padding: 5px 10px;
         height: 100px;
         resize: none;
+        font-family: "dosisRegular";
       }
       .buttonSubmit{
         border-radius: 10px;
@@ -38,6 +40,7 @@
         background-color: $paleDogwood;
         color: $light;
         border-color: $cinereous;
+        font-family: "dosisMedium";
         &:hover{
           background-color: $almond;
           color: $dark;
@@ -49,7 +52,7 @@
       padding-top: 15px;
       text-align: center;
       color: $light;
-      font-family: "dosisLight";
+      font-family: "dosisRegular";
     }
   }
 }
