[feature] - sidebar change

--- a/scss/_loading.scss
+++ b/scss/_loading.scss
@@ -7,8 +7,8 @@
     animation: rotate 1s linear infinite;
   }
   .loadingText{
-    font-family: "beautyDream";
-    font-size: 30px;
+    font-family: "dosisRegular";
+    font-size: 25px;
   }
 }
 
