--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -7,9 +7,6 @@
   background-color: $cinereous;
   z-index: 10001;
   transition: right 0.5s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   .closeBtn{
     color: $light;
     position: absolute;
@@ -18,6 +15,87 @@
     font-family: "LoveloBlack";
     cursor: pointer;
     font-size: 20px;
+    z-index: 200;
+  }
+  .sidebarContainer{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr;
+    row-gap: 50px;
+    align-items: center;
+    .sidebarTitleContainer{
+      height: 100%;
+      width: 100%;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:before{    
+        content: "";
+        background-image: url("../src/images/sidebarTitleBackground.jpg");
+        background-size: cover;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        opacity: 0.4;
+      } 
+      .sidebarTitle{
+        color: $light;
+        font-family: "loveloBlack";
+        font-size: 45px;
+        position: relative;
+      }
+    }
+    .sidebarFormContainer{
+      padding-left: 10%;
+      padding-right: 10%;
+      form{
+        display: flex;
+        flex-direction: column;
+        .nameSurnameContainer{
+          display: flex; 
+          justify-content: space-between;
+        }
+        input{
+          padding: 5px 10px;
+          margin-bottom: 10px;
+          font-family: "dosisRegular";
+        }
+        textarea{
+          margin-bottom: 10px;
+          padding: 5px 10px;
+          height: 100px;
+          resize: none;
+          font-family: "dosisRegular";
+        }
+        select{
+          padding: 5px 10px;
+          font-family: "dosisRegular";
+          margin-bottom: 10px;
+        }
+        .buttonSubmit{
+          border-radius: 10px;
+          margin-top: 20px;
+          padding: 10px 5px;
+          background-color: $paleDogwood;
+          color: $light;
+          border-color: $cinereous;
+          font-family: "dosisMedium";
+          &:hover{
+            background-color: $almond;
+            color: $dark;
+          }
+        }
+      }
+      .sidebarDescription{
+        padding-top: 15px;
+        text-align: center;
+        color: $light;
+        font-family: "dosisRegular";
+      }
+    }
   }
 }
 
