--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -1,9 +1,9 @@
 .blogContainer{
   .title{
-    font-family: "loveloBlack";
+    font-family: "beautyDream";
     text-align: center;
     padding-top: 50px;
-    font-size: 30px;
+    font-size: 40px;
     color: $dark;
   }
   .blogGrid{
@@ -15,13 +15,74 @@
     padding-top: 75px;
     padding-bottom: 75px;
     .articleContainer{
-      height: 250px;
-      width: 500px;
+      position: relative;
+      height: 275px;
+      width: 550px;
       background-color: $cinereous;
-      opacity: .8;
-      &:hover{
-        cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      &:before{    
+        border-radius: 10px;
+        content: "";
+        background-size: cover;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        opacity: 0.7;
+      }
+      &:hover:before{
         opacity: 1;
+        cursor: pointer;
+      }
+      h2{
+        color: $light;
+        font-family: "dosisSemiBold";
+        position: relative;
+        font-size: 28px;
+      }
+    }
+    .article1{
+      &:before{
+        background-image: url("../src/images/article1Image.JPG");
+      }
+    }
+    .article2{
+      &:before{
+        background-image: url("../src/images/article2Image.jpg");
+      }
+    }
+    .article3{
+      &:before{
+        background-image: url("../src/images/article3Image.jpg");
+      }
+    }
+    .article4{
+      &:before{
+        background-image: url("../src/images/article4Image.jpg");
+      }
+    }
+    .article5{
+      &:before{
+        background-image: url("../src/images/article5Image.JPG");
+      }
+    }
+    .article6{
+      &:before{
+        background-image: url("../src/images/article6Image.JPG");
+      }
+    }
+    .article7{
+      &:before{
+        background-image: url("../src/images/article7Image.JPG");
+      }
+    }
+    .article8{
+      &:before{
+        background-image: url("../src/images/article8Image.JPG");
       }
     }
   }
