--- a/scss/_structure.scss
+++ b/scss/_structure.scss
@@ -7,6 +7,7 @@
 html{
     p, h1 , h2, h3, h4 {
         margin: 0;
+        font-family: "dosisRegular";
     }
     a{
         text-decoration: none;
