--- a/scss/_section3.scss
+++ b/scss/_section3.scss
@@ -1,4 +1,5 @@
 .section3Container{
+  position: relative;
   background-color: $isabeline;
   padding: 30px 50px 50px 50px;
   .section3TitleContainer{
