--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,7 +11,30 @@
 @import "inputDataTime";
 @import "blog";
 @import "articles";
+@import "seeMore";
 
 .main-content{
   filter: blur(2px);
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.3);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(.3);
+  }
 }
