--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,7 @@ html a {
         text-align: justify; }
 
 .section3Container {
+  position: relative;
   background-color: #ede9e3;
   padding: 30px 50px 50px 50px; }
   .section3Container .section3TitleContainer {
@@ -589,13 +590,61 @@ html a {
 .article8:before {
   background-image: url("../src/images/article8Image.JPG"); }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateX(300px); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
+.seeMoreContainer {
+  position: absolute;
+  z-index: 2000;
+  top: 120px;
+  left: 13%;
+  width: 74%;
+  background-color: #d4b2a7;
+  border-radius: 20px;
+  box-shadow: 0px 0px 13px 8px rgba(0, 0, 0, 0.42);
+  -webkit-box-shadow: 0px 0px 13px 8px rgba(0, 0, 0, 0.42);
+  -moz-box-shadow: 0px 0px 13px 8px rgba(0, 0, 0, 0.42);
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+  padding: 10px; }
+  .seeMoreContainer .closeBtn {
+    color: #fff;
+    position: absolute;
+    right: 30px;
+    top: 20px;
+    font-family: "LoveloBlack";
+    cursor: pointer;
+    font-size: 20px;
+    z-index: 200; }
+  .seeMoreContainer h3 {
+    text-align: center;
+    font-family: "dosisSemiBold";
+    padding: 30px 0px;
+    font-size: 30px;
+    color: #fff; }
+  .seeMoreContainer p {
+    padding: 5px 50px;
+    text-align: justify;
+    color: #ede9e3;
+    font-size: 16px; }
+  .seeMoreContainer .parrafo {
+    padding-bottom: 20px; }
+
+.seeMoreClosed {
+  animation: fadeOut 1s ease-in-out backwards; }
 
 .main-content {
   filter: blur(2px); }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.3); }
+  100% {
+    opacity: 1;
+    transform: scale(1); } }
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+    transform: scale(1); }
+  100% {
+    opacity: 0;
+    transform: scale(0.3); } }
