--- a/scss/_loading.scss
+++ b/scss/_loading.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
   .brain-icon {
     animation: rotate 1s linear infinite;
   }
