--- a/scss/_seeMore.scss
+++ b/scss/_seeMore.scss
@@ -4,7 +4,7 @@
   top: 120px;
   left: 13%;
   width: 74%;
-  background-color: $paleDogwood;
+  background-color: $isabeline;
   border-radius: 20px;
   box-shadow: 0px 0px 13px 8px rgba(0,0,0,0.42);
   -webkit-box-shadow: 0px 0px 13px 8px rgba(0,0,0,0.42);
@@ -13,7 +13,7 @@
   animation: fadeIn 1s ease-in-out forwards;
   padding: 10px;
   .closeBtn{
-    color: $light;
+    color: $cinereous;
     position: absolute;
     right: 30px;
     top: 20px;
@@ -22,21 +22,42 @@
     font-size: 20px;
     z-index: 200;
   }
+  h2{
+    text-align: center;
+    font-family: "loveloBlack";
+    padding-top: 30px;
+    font-size: 30px;
+    color: $cinereous;
+  }
   h3{
     text-align: center;
     font-family: "dosisSemiBold";
     padding: 30px 0px;
     font-size: 30px;
-    color: $light;
+    color: $cinereous;
   }
-  p{
-    padding: 5px 50px ;
-    text-align: justify;
-    color: $isabeline;
-    font-size: 16px;
-  }
-  .parrafo{
-    padding-bottom: 20px;
+  .teamDescriptionContainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(7, align-items);
+    row-gap: 30px;
+    column-gap: 100px;
+    padding: 20px 50px;
+    .teamDescriptionItemContainer{
+      display: flex;
+      .teamDescriptionItem{
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+      }
+    }
+    .teamDescriptionText{
+      padding-left: 10px;
+      color: $dark;
+      font-family: "dosisRegular";
+      font-size: 16px;
+      text-align: justify;
+    }
   }
 }
 
