--- a/src/App.css
+++ b/src/App.css
@@ -373,6 +373,7 @@ html a {
       width: 100%;
       position: relative;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center; }
       .sidebar .sidebarContainer .sidebarTitleContainer:before {
@@ -388,8 +389,13 @@ html a {
       .sidebar .sidebarContainer .sidebarTitleContainer .sidebarTitle {
         color: #fff;
         font-family: "loveloBlack";
-        font-size: 45px;
+        font-size: 35px;
         position: relative; }
+      .sidebar .sidebarContainer .sidebarTitleContainer .sidebarSubTitle {
+        position: relative;
+        color: #fff;
+        font-family: "dosisRegular";
+        font-size: 20px; }
     .sidebar .sidebarContainer .sidebarFormContainer {
       padding-left: 10%;
       padding-right: 10%; }
@@ -444,7 +450,8 @@ html a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  height: 100%; }
   .loadingContainer .brain-icon {
     animation: rotate 1s linear infinite; }
   .loadingContainer .loadingText {
@@ -596,7 +603,7 @@ html a {
   top: 120px;
   left: 13%;
   width: 74%;
-  background-color: #d4b2a7;
+  background-color: #ede9e3;
   border-radius: 20px;
   box-shadow: 0px 0px 13px 8px rgba(0, 0, 0, 0.42);
   -webkit-box-shadow: 0px 0px 13px 8px rgba(0, 0, 0, 0.42);
@@ -605,7 +612,7 @@ html a {
   animation: fadeIn 1s ease-in-out forwards;
   padding: 10px; }
   .seeMoreContainer .closeBtn {
-    color: #fff;
+    color: #a38f85;
     position: absolute;
     right: 30px;
     top: 20px;
@@ -613,19 +620,37 @@ html a {
     cursor: pointer;
     font-size: 20px;
     z-index: 200; }
+  .seeMoreContainer h2 {
+    text-align: center;
+    font-family: "loveloBlack";
+    padding-top: 30px;
+    font-size: 30px;
+    color: #a38f85; }
   .seeMoreContainer h3 {
     text-align: center;
     font-family: "dosisSemiBold";
     padding: 30px 0px;
     font-size: 30px;
-    color: #fff; }
-  .seeMoreContainer p {
-    padding: 5px 50px;
-    text-align: justify;
-    color: #ede9e3;
-    font-size: 16px; }
-  .seeMoreContainer .parrafo {
-    padding-bottom: 20px; }
+    color: #a38f85; }
+  .seeMoreContainer .teamDescriptionContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(7, align-items);
+    row-gap: 30px;
+    column-gap: 100px;
+    padding: 20px 50px; }
+    .seeMoreContainer .teamDescriptionContainer .teamDescriptionItemContainer {
+      display: flex; }
+      .seeMoreContainer .teamDescriptionContainer .teamDescriptionItemContainer .teamDescriptionItem {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start; }
+    .seeMoreContainer .teamDescriptionContainer .teamDescriptionText {
+      padding-left: 10px;
+      color: #212121;
+      font-family: "dosisRegular";
+      font-size: 16px;
+      text-align: justify; }
 
 .seeMoreClosed {
   animation: fadeOut 1s ease-in-out backwards; }
