--- a/src/App.css
+++ b/src/App.css
@@ -82,37 +82,7 @@ html a {
     background-image: url("../src/images/section1Background.jpg");
     background-size: cover;
     height: 400px;
-    display: flex;
-    /* .titleContainer{
-      position: absolute;
-      top: 50%;
-      right: 10%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .section1Title{
-        font-family: "dosisRegular";
-        color: $almond;
-        font-size: 50px;
-      }
-      .section1Subtitle{
-        font-family: "beautyDream";
-        padding-top: 10px;
-        font-size: 30px;
-        color: $paleDogwood;
-      }
-      .homeTitle{
-        color: $cinereous;
-        text-shadow: 1px -1px 0px rgba(0,0,0,1);
-        font-size: 40px;
-        font-family: "loveloBlack";
-        padding-left: 15px;
-      }
-      .homeTitleBeauty{
-        font-family: "beautyDream";
-        text-shadow: 1px -1px 0px rgba(0,0,0,1);
-      }
-    } */ }
+    display: flex; }
   .section1Container .subtitleContainer {
     display: flex;
     padding-top: 50px;
