--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,16 @@ html a {
       min-height: 100%;
       width: 50%;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      justify-content: flex-start;
       align-items: center; }
+      .section1Container .subtitleContainer .imageSubtitleContainer .mapImage {
+        opacity: .8;
+        height: 80%; }
+      .section1Container .subtitleContainer .imageSubtitleContainer .mapQuote {
+        font-family: "dosisRegular";
+        font-style: italic;
+        padding-top: 30px; }
   .section1Container .homeDescriptionContainer {
     width: 50%;
     padding-right: 120px; }
