[feature] - border radius to image section 1 & tu mundo interior string in frequent questions in font style italic

--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -22,6 +22,7 @@
       .mapImage{
         opacity: .8;
         height: 80%;
+        border-radius: 20px;
       }
       .mapQuote{
         font-family: "dosisRegular";
